# Ruski-with-all-platforms

./: .gitignore  README.md
android/: README.md  settings.gradle.kts
android/app/: build.gradle.kts
android/app/src/androidTest/java/com/fernan/apps/: ExampleInstrumentedTest.kt
android/app/src/main/java/com/fernan/apps/: Library.kt  MainActivity.kt
android/app/src/main/java/com/fernan/apps/ui/theme/: Color.kt  Theme.kt  Type.kt
android/app/src/test/java/com/fernan/apps/: ExampleUnitTest.kt
android/gradle/: libs.versions.toml
rust-library/: Cargo.toml  android-build-debug.sh  android-build-release.sh  wasm-web-build.sh
rust-library/library_c/: Cargo.toml
rust-library/library_c/src/: lib.rs
rust-library/library_jni/: Cargo.toml
rust-library/library_jni/src/: lib.rs
rust-library/library_wasm/: Cargo.toml
rust-library/library_wasm/src/: lib.rs
wasm-web/: index.html  index.js
